dh-make-perl (0.30) UNRELEASED; urgency=low

  * Added warning when the extracted copyright information is incomplete

 -- Gunnar Wolf <gwolf@debian.org>  Fri, 24 Aug 2007 13:45:24 -0500

dh-make-perl (0.29) unstable; urgency=low

  * rules*.xs: add a call to dh_shlibdeps for arch-dependent packages
    Thanks to Martín Ferrari for spotting

 -- Damyan Ivanov <dmn@debian.org>  Tue, 21 Aug 2007 09:47:49 +0300

dh-make-perl (0.28) unstable; urgency=low

  [ Gunnar Wolf ]
  * Added "basepkgs" option to specify which packages should be
    considered base
  * The list of base modules is no longer specified by hand - Base
    packages are now queried and this list is generated from it.
  * Pragmas and base modules are handled the same way - There is no real
    way to differentiate them... And they were used interchangeably, so
    there ;-)
  * Homogeneized the usage of dh_* helpers in the different cases of
    generated debian/rules

  [ Damyan Ivanov ]
  * current watch file version is 3, this is what we generate too
    stricter debian/watch patterns, omit capturing file extension
  * Move tests from install to build target
  * better explaination in binary-arch target for arch-indep packages and in
    binary-indep target of arch-dep packages why the target is empty
  * Add new option "--pkg-perl" which adds some functionality useful when
    packages are created for the Debian Perl Group. Currently adds XS-Vcs-*
    fields to debian/control and sets the Maintainer and Uploaders fields
    accordingly

 -- Damyan Ivanov <dmn@debian.org>  Mon, 20 Aug 2007 10:26:31 +0300

dh-make-perl (0.27) unstable; urgency=low

  [ Gunnar Wolf ]
  * Moved all the options received from the user to %opts, for better
    code readability
  * When the module to be packaged declares a dependency on a specific
    Perl version, reflect it in the output dependency/build dependency
    information, rather than complaining that no such module exists

  [ gregor herrmann ]