@@ -1,8 +1,13 @@
 dh-make-perl (0.30) UNRELEASED; urgency=low
 
+  [ Gunnar Wolf ]
   * Added warning when the extracted copyright information is incomplete
 
- -- Gunnar Wolf <gwolf@debian.org>  Fri, 24 Aug 2007 13:45:24 -0500
+  [ Damyan Ivanov ]
+  * rules* clean: Move dh_clean $stamp_files call before the $(MAKE) clean
+    call as that may fail half-way, leaving the stamps in place
+
+ -- Damyan Ivanov <dmn@debian.org>  Tue, 11 Sep 2007 11:31:01 +0300
 
 dh-make-perl (0.29) unstable; urgency=low
 
